--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3,24 +3,271 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Subcategory</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Launched</th>\n",
+       "      <th>Deadline</th>\n",
+       "      <th>Goal</th>\n",
+       "      <th>Pledged</th>\n",
+       "      <th>Backers</th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1860890148</td>\n",
+       "      <td>Grace Jones Does Not Give A F$#% T-Shirt (limi...</td>\n",
+       "      <td>Fashion</td>\n",
+       "      <td>Fashion</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2009-04-21 21:02:48</td>\n",
+       "      <td>2009-05-31</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>625</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>709707365</td>\n",
+       "      <td>CRYSTAL ANTLERS UNTITLED MOVIE</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>Shorts</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2009-04-23 00:07:53</td>\n",
+       "      <td>2009-07-20</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1703704063</td>\n",
+       "      <td>drawing for dollars</td>\n",
+       "      <td>Art</td>\n",
+       "      <td>Illustration</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2009-04-24 21:52:03</td>\n",
+       "      <td>2009-05-03</td>\n",
+       "      <td>20</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Successful</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>727286</td>\n",
+       "      <td>Offline Wikipedia iPhone app</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Software</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2009-04-25 17:36:21</td>\n",
+       "      <td>2009-07-14</td>\n",
+       "      <td>99</td>\n",
+       "      <td>145</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Successful</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1622952265</td>\n",
+       "      <td>Pantshirts</td>\n",
+       "      <td>Fashion</td>\n",
+       "      <td>Fashion</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2009-04-27 14:10:39</td>\n",
+       "      <td>2009-05-26</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>387</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ID                                               Name   \n",
+       "0  1860890148  Grace Jones Does Not Give A F$#% T-Shirt (limi...  \\\n",
+       "1   709707365                     CRYSTAL ANTLERS UNTITLED MOVIE   \n",
+       "2  1703704063                                drawing for dollars   \n",
+       "3      727286                       Offline Wikipedia iPhone app   \n",
+       "4  1622952265                                         Pantshirts   \n",
+       "\n",
+       "       Category   Subcategory        Country             Launched    Deadline   \n",
+       "0       Fashion       Fashion  United States  2009-04-21 21:02:48  2009-05-31  \\\n",
+       "1  Film & Video        Shorts  United States  2009-04-23 00:07:53  2009-07-20   \n",
+       "2           Art  Illustration  United States  2009-04-24 21:52:03  2009-05-03   \n",
+       "3    Technology      Software  United States  2009-04-25 17:36:21  2009-07-14   \n",
+       "4       Fashion       Fashion  United States  2009-04-27 14:10:39  2009-05-26   \n",
+       "\n",
+       "    Goal  Pledged  Backers       State  \n",
+       "0   1000      625       30      Failed  \n",
+       "1  80000       22        3      Failed  \n",
+       "2     20       35        3  Successful  \n",
+       "3     99      145       25  Successful  \n",
+       "4   1900      387       10      Failed  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/kickstarter_projects.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method IndexOpsMixin.value_counts of Index(['ID', 'Name', 'Category', 'Subcategory', 'Country', 'Launched',\n",
+       "       'Deadline', 'Goal', 'Pledged', 'Backers', 'State'],\n",
+       "      dtype='object')>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.value_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.nunique of                 ID                                               Name   \n",
+       "0       1860890148  Grace Jones Does Not Give A F$#% T-Shirt (limi...  \\\n",
+       "1        709707365                     CRYSTAL ANTLERS UNTITLED MOVIE   \n",
+       "2       1703704063                                drawing for dollars   \n",
+       "3           727286                       Offline Wikipedia iPhone app   \n",
+       "4       1622952265                                         Pantshirts   \n",
+       "...            ...                                                ...   \n",
+       "374848  1486845240                  Americas Got Talent - Serious MAK   \n",
+       "374849   974738310  EVO Planner: The World's First Personalized Fl...   \n",
+       "374850  2106246194    Help save La Gattara, Arizona's first Cat Cafe!   \n",
+       "374851  1830173355                                Digital Dagger Coin   \n",
+       "374852  1339173863                              Spirits of the Forest   \n",
+       "\n",
+       "            Category     Subcategory        Country             Launched   \n",
+       "0            Fashion         Fashion  United States  2009-04-21 21:02:48  \\\n",
+       "1       Film & Video          Shorts  United States  2009-04-23 00:07:53   \n",
+       "2                Art    Illustration  United States  2009-04-24 21:52:03   \n",
+       "3         Technology        Software  United States  2009-04-25 17:36:21   \n",
+       "4            Fashion         Fashion  United States  2009-04-27 14:10:39   \n",
+       "...              ...             ...            ...                  ...   \n",
+       "374848         Music         Hip-Hop  United States  2018-01-02 14:13:09   \n",
+       "374849        Design  Product Design  United States  2018-01-02 14:15:38   \n",
+       "374850          Food            Food  United States  2018-01-02 14:17:46   \n",
+       "374851           Art             Art  United States  2018-01-02 14:38:17   \n",
+       "374852         Games  Tabletop Games          Spain  2018-01-02 15:02:31   \n",
+       "\n",
+       "          Deadline   Goal  Pledged  Backers       State  \n",
+       "0       2009-05-31   1000      625       30      Failed  \n",
+       "1       2009-07-20  80000       22        3      Failed  \n",
+       "2       2009-05-03     20       35        3  Successful  \n",
+       "3       2009-07-14     99      145       25  Successful  \n",
+       "4       2009-05-26   1900      387       10      Failed  \n",
+       "...            ...    ...      ...      ...         ...  \n",
+       "374848  2018-01-16    500        0        0        Live  \n",
+       "374849  2018-02-09  15000      269        8        Live  \n",
+       "374850  2018-01-16  10000      165        3        Live  \n",
+       "374851  2018-02-01    650        7        1        Live  \n",
+       "374852  2018-01-26  24274     4483       82        Live  \n",
+       "\n",
+       "[374853 rows x 11 columns]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nunique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
