extract launch year and month to separate features

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -163,6 +163,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract Launch Month and Launch Year in separate features\n",
+    "df['launch_month'] = df['launched'].dt.month\n",
+    "df['launch_year'] = df['launched'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Summary stats for numerical columns\n",
     "print(\"Summary statistics for goal, pledged, and backers:\")\n",
     "print(df[['goal', 'pledged', 'backers']].describe())"
