add the code to get static data for front-end EDA

--- a/notebooks/EDA_Oleksii.ipynb
+++ b/notebooks/EDA_Oleksii.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "df = pd.read_csv('../data/kickstarter_projects.csv')\n",
+    "df = pd.read_csv('../data/kickstarter_common.csv')\n",
     "\n",
     "df.columns = [col.lower() for col in df.columns]\n",
     "\n",
@@ -90,7 +90,9 @@
     "total_by_category = df['category'].value_counts()\n",
     "success_rate = (success_by_category / total_by_category).sort_values(ascending=False)\n",
     "success_rate.plot(kind='bar', title='Success Rate by Main Category')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(success_rate)"
    ]
   },
   {
@@ -188,16 +190,6 @@
     "\n",
     "a. Funding Goal (goal and usd_goal_real)\n",
     "Higher goals might be harder to achieve. Let’s compare distributions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()\n",
-    "df['state'].head(5)"
    ]
   },
   {
@@ -316,9 +308,12 @@
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(x='launch_month', y='success', data=df)\n",
     "plt.title('Success Rate by Launch Month')\n",
+    "\n",
+    "# Set the Y-axis to start at 0.3 (adjust the upper limit as needed)\n",
+    "plt.ylim(0.3, 0.45)  # Upper limit is 10% above the max success rate\n",
     "plt.show()\n",
     "\n",
-    "print(df.groupby('launch_month')['success'].mean().sort_values(ascending=False))"
+    "print(df.groupby('launch_month')['success'].mean())"
    ]
   },
   {
@@ -393,6 +388,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 4: Categories and subcategories\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a pivot table counting occurrences of subcategories within categories\n",
+    "pivot_table = pd.pivot_table(df,\n",
+    "                            columns=['category','subcategory'], \n",
+    "                            aggfunc='size', \n",
+    "                            fill_value=0)\n",
+    "\n",
+    "# Display the pivot table\n",
+    "print(\"Pivot Table of Categories and Subcategories:\")\n",
+    "print(pivot_table)\n",
+    "\n",
+    "# Plot the counts of categories\n",
+    "category_counts = df['category'].value_counts()\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "category_counts.plot(kind='bar', color='skyblue')\n",
+    "plt.title('Count of Items per Category')\n",
+    "plt.xlabel('Category')\n",
+    "plt.ylabel('Count')\n",
+    "plt.xticks(rotation=45, ha='right')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group subcategories by category\n",
+    "grouped = df.groupby('category')['subcategory'].unique().reset_index()\n",
+    "\n",
+    "# Format as JavaScript-like string\n",
+    "js_output = \"const categories = [\\n\"\n",
+    "for index, row in grouped.iterrows():\n",
+    "    category = row['category']\n",
+    "    subcategories = row['subcategory'].tolist()\n",
+    "    # Convert to string with proper quotes and formatting\n",
+    "    subcat_str = ', '.join(f\"'{sub}'\" for sub in subcategories)\n",
+    "    js_output += f\"  {{ name: '{category}', subcategories: [{subcat_str}] }},\\n\"\n",
+    "js_output += \"];\"\n",
+    "\n",
+    "# Print the result\n",
+    "print(js_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract unique countries from the 'Country' column (adjust column name if needed)\n",
+    "countries = df['country'].dropna().unique().tolist()\n",
+    "\n",
+    "# Sort the list alphabetically for readability\n",
+    "countries.sort()\n",
+    "\n",
+    "# Print as a simple list\n",
+    "print(\"List of countries:\")\n",
+    "print(countries)\n",
+    "\n",
+    "# Optionally, format as a JavaScript array for front-end use\n",
+    "js_countries = \"const countries = \" + str(countries).replace(\"'\", \"\\\"\") + \";\"\n",
+    "print(\"\\nJavaScript array format:\")\n",
+    "print(js_countries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##  Digging Deeper\n",
     "\n",
     "* Duration: Bucket into ranges (<20, 20-40, >40 days) to check if extremes matter:"
@@ -404,9 +479,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['duration_bucket'] = pd.cut(df['duration_days'], bins=[0, 20, 40, 100], labels=['Short (0-20)', 'Medium (20-40)', 'Long(40+)'])\n",
+    "# Create duration buckets\n",
+    "df['duration_bucket'] = pd.cut(df['duration_days'], \n",
+    "                              bins=[1, 10, 20, 30, 40, 50, 100], \n",
+    "                              labels=['1-10', '11-20', '21-30', '31-40', '41-50', '51-100'])\n",
+    "\n",
+    "# Plot the barplot\n",
     "sns.barplot(x='duration_bucket', y='success', data=df)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Calculate mean success rate per bucket\n",
+    "bucket_success = df.groupby('duration_bucket')['success'].mean().reset_index()\n",
+    "\n",
+    "# Format as JavaScript array of objects\n",
+    "js_output = \"const durationData = [\\n\"\n",
+    "for index, row in bucket_success.iterrows():\n",
+    "    bucket = row['duration_bucket']\n",
+    "    success_rate = round(row['success'], 4)  # Round to 4 decimal places for clarity\n",
+    "    js_output += f\"  {{ bucket: '{bucket}', successRate: {success_rate} }},\\n\"\n",
+    "js_output += \"];\"\n",
+    "\n",
+    "# Print the result for front-end use\n",
+    "print(js_output)"
    ]
   },
   {
@@ -433,9 +527,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heatmapdata = df['pledged']\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "sns.heatmap(df)"
+    "# Extract year from 'launched' column\n",
+    "df['launch_year'] = df['launched'].dt.year\n",
+    "\n",
+    "# Calculate counts (non-cumulative)\n",
+    "# Total projects per year\n",
+    "total_projects = df.groupby('launch_year').size().reset_index(name='total_count')\n",
+    "\n",
+    "# Successful projects per year (assuming 'success' is 1 for success, 0 for failure)\n",
+    "successful_projects = df[df['success'] == 1].groupby('launch_year').size().reset_index(name='success_count')\n",
+    "\n",
+    "# Merge the dataframes for plotting\n",
+    "merged_data = pd.merge(total_projects[['launch_year', 'total_count']], \n",
+    "                       successful_projects[['launch_year', 'success_count']], \n",
+    "                       on='launch_year', how='outer').fillna(0)\n",
+    "\n",
+    "# Create the line plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.lineplot(x='launch_year', y='total_count', data=merged_data, label='Total Projects', marker='o')\n",
+    "sns.lineplot(x='launch_year', y='success_count', data=merged_data, label='Successful Projects', marker='s')\n",
+    "plt.title('Project Trends by Year (Yearly Counts)')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Count')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.xticks(merged_data['launch_year'].astype(int))  # Ensure years are integers\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Print the data for reference\n",
+    "print(\"Counts by year:\")\n",
+    "print(merged_data)"
    ]
   },
   {
@@ -443,7 +569,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Assuming 'goal' is the column with funding goals\n",
+    "# Define bins for funding goals (adjust as needed)\n",
+    "goal_bins = [0, 1000, 5000, 10000, 50000, 100000, float('inf')]\n",
+    "goal_labels = ['0-1K', '1K-5K', '5K-10K', '10K-50K', '50K-100K', '100K+']\n",
+    "\n",
+    "# Create a new column with funding goal buckets\n",
+    "df['goal_bucket'] = pd.cut(df['goal'], bins=goal_bins, labels=goal_labels, right=False)\n",
+    "\n",
+    "# Calculate the count of projects in each bucket\n",
+    "goal_distribution = df['goal_bucket'].value_counts().sort_index()\n",
+    "\n",
+    "# Plot the pie chart\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.pie(goal_distribution, labels=goal_distribution.index, autopct='%1.1f%%', startangle=90, colors=plt.cm.Paired.colors)\n",
+    "plt.title('Funding Goal Distribution')\n",
+    "plt.axis('equal')  # Equal aspect ratio ensures the pie is a circle\n",
+    "plt.show()\n",
+    "\n",
+    "# Print the distribution for reference\n",
+    "print(\"Funding Goal Distribution:\")\n",
+    "print(goal_distribution)"
+   ]
   }
  ],
  "metadata": {
